Align bug fixed for account item in hamburger menu

--- a/chrome/components/ogx_hamburger-menu-icons.css
+++ b/chrome/components/ogx_hamburger-menu-icons.css
@@ -71,6 +71,7 @@
 
 #appMenu-fxa-status2:not([fxastatus="signedin"])  toolbarbutton {
     border-radius: 2px !important;
+    margin-block-start: 2px !important;
 }
 
 #appMenu-fxa-status2:not([fxastatus="signedin"])  toolbarbutton:hover {
